Update build.gradle fix test configuration