@@ -103,15 +103,6 @@ test {
     }
     doFirst {
         def javafxLibPath = getJavaFXLibPath()
-        jvmArgs = [
-                '--module-path', javafxLibPath,
-                '--add-modules', 'javafx.controls,javafx.fxml',
-                '--add-opens', 'javafx.graphics/javafx.scene=ALL-UNNAMED',
-                '--add-opens', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
-                '--add-opens', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
-                '--add-opens', 'javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
-                '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
-        ]
     }
 }
 
